# mikro_jump_bridge

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KURULUM.md  LICENSE  MONETIZASYON_PLANI.md  README.md  baslat.bat  kontrol.bat  manage.py  olustur_admin.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
banka/: admin.py  apps.py  forms.py  models.py  parser.py  urls.py  views.py
banka/migrations/: 0001_initial.py
cari/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cari/migrations/: 0001_initial.py
ceksenet/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ceksenet/migrations/: 0001_initial.py
dashboard/: apps.py  urls.py  views.py
docs/: ANALIZ-2026-05.md  PROJE_DERIN_ANALIZ_RAPORU_2026-05-24.md
docs/arsiv/: README.md
docs/runbooks/: 01-guvenlik-sir-yonetimi-ve-kurulum-guvenligi.md  02-kimlik-dogrulama-yetkilendirme-ve-api-guvenligi.md  03-veri-butunlugu-ve-transaction-standardi.md  04-test-stratejisi-ve-kalite-kapilari.md  05-ci-cd-ve-otomasyon-standardi.md  (+14 more)
fatura/: admin.py  apps.py  efatura.py  forms.py  models.py  tests.py  urls.py  views.py
gider/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hesap_yonetimi/: apps.py  tests.py  urls.py  views.py
installer/: baslat_kurulu.bat  setup.iss
kasa/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
kullanici/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
lisans/: admin.py  apps.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
logs/: mikro_sync.log.2026-05-24
mikro_gelen/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
mikro_sync/: asgi.py  context_processors.py  forms_mixin.py  middleware.py  settings.py  urls.py  wsgi.py
muhasebe_buro/: api_views.py  context_processors.py  middleware.py  permissions.py  settings.py  surum_kontrol.py  tests.py  urls.py  wsgi.py
posta/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
rapor/: admin.py  apps.py  urls.py  views.py
sozlesme/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
stok/: __init__.py  admin.py  apps.py  degerleme.py  forms.py  models.py  urls.py  views.py
sync_motor/: admin.py  apps.py  client.py  forms.py  models.py  sql_utils.py  test_client.py  tests.py  urls.py  views.py
tahsilat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
takvim/: apps.py  urls.py  views.py
templates/: base.html  confirm_delete.html
(+101 files in other folders)
